--- a/Main.html
+++ b/Main.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-<script src="//cdn.jsdelivr.net/npm/phaser@3.2.1/dist/phaser.js"></script>
+        <h1> Pancho el papa de Efren & Ebrahim</h1>
+      <script src = "phaser.min.js"></script>
+      <script src = "main.js"></script>
     </head>
-<body>
-    <script src ="Main.js"></script>
-    </body>
-        
+
+   <body>
+   </body>
 </html>
