--- a/Ever.html
+++ b/Ever.html
@@ -1,9 +1,12 @@
 <html>
+<head>
+ <link rel="stylesheet" href="Text.css">
 
 
-<a>Hi, my name is Ever. I've done things like this before!
-    I wonder if the enter key works on (a)s</a>
-
-
+</head>
+    <body>
+        <p>Hi, my name is Ever. I've done things like this before!
+    I wonder if the enter key works on (a)s</p>
+    </body>
 
 </html>
