--- a/Main.html
+++ b/Main.html
@@ -1,8 +1,12 @@
 <html>
     <head>
-        <h1> Enertion</h1>
+        <h1> Mushroom vs. Brocolli War</h1>
       <script src = "phaser.min.js"></script>
       <script src = "main.js"></script>
+        <audio controls>
+          <source src="horse.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
     </head>
     
     
