--- a/Main.html
+++ b/Main.html
@@ -3,8 +3,14 @@
         <h1> Mushroom vs. Brocolli War</h1>
       <script src = "phaser.min.js"></script>
       <script src = "main.js"></script>
+        <audio controls autoplay>
+          <source src="War/Music/americanidiot.m4a" type="audio/mpeg">
+           
+        Your browser does not support the audio element.
+        </audio>
         <audio controls>
-          <source src="horse.mp3" type="audio/mpeg">
+            <source src="War/Music/ghostbusters.m4a" type="audio/mpeg">
+            <source src="War/Music/hillswk.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
     </head>
