--- a/Main.html
+++ b/Main.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <h1> Enertion</h1>
+        <h1> Mushroom War</h1>
       <script src = "phaser.min.js"></script>
       <script src = "main.js"></script>
     </head>
