--- a/Main.html
+++ b/Main.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-
+        <title> Mushroom vs. Brocolli War </title>
         <h1> Mushroom vs. Brocolli War</h1>
 
       <script src = "phaser.min.js"></script>
