--- a/Ever.html
+++ b/Ever.html
@@ -8,8 +8,10 @@
 
 </head>
     <body>
-        <p>Hi, my name is Ever. I've done things like this before!
-    I wonder if the enter key works on (a)s</p>
+        <BioSize>
+        <b>Hi, my name is Ever. I've done things like this before!
+    I wonder if the enter key works on (a)s</b>
+        </BioSize>
     </body>
 
 </html>
