--- a/Main.html
+++ b/Main.html
@@ -15,7 +15,11 @@
         </audio>
     </head>
     
-    
+    <!--
+<body onLoad="setup();">
+<audio id="audio"  src="Music/1.mp3"controls="controls" autoplay="autoplay"   align=""> </audio>
+</body>
+-->
    <body>
    </body>
 </html>
